--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <nav>
         <ul class="flex space-x-6 font-semibold text-base">
           <li><a href="#home" class="hover:text-green-400">Home</a></li>
-          <li><a href="#products" class="hover:text-green-400">Products</a></li>
           <li><a href="#about" class="hover:text-green-400">About Us</a></li>
           <li><a href="#contact" class="hover:text-green-400">Contact</a></li>
         </ul>
@@ -171,23 +170,16 @@
 We use food and tea to replace all body and bone mineral that is spotted in the test. We then offer various treatments and services aimed at improving the appearance of the body.
 
 Some services We Offer are as follows;
-1. Heart Contouring. This the process of supplying blood and food to the heart alongside breathing exercise, 
-then after that the heart will undergo cleansing of cholesterol, blood fat, blood viscosity and return the heart to it's perfect condition. 
-2. Weight Loss Programs: Guidance and support for weight loss, including:
-    - Diet plans and nutrition counseling
-    - Exercise programs and fitness coaching
-    - Behavioral modification techniques
-3. Post-Non Surgical Care: Support and treatment for individuals who have internal growth  such as: fibroids, cervical growth. Ovarian cyst appendicitis, 
-Prostate Various liquid are prepared to shrink the growth without surgery you will be on specific diet during the period 
-4. Skin Rejuvenation: Treatments to improve skin texture and appearance, through food and tea therapy   
-5. Muscle building and Strengthening: Services aimed at improving muscle tone and strength, such as: building muscle through exercises and food 
-6. Liver Contour: this is the process of nurturing the liver with plant base proteinous food and later cleanse the liver of every fat
-7.  Kidney Care: this is the process of cleaning the kidney of all salty element, kidney stone, uric acid 
-and proteinamia and return the kidney back to it's perfect condition.
-8. Immune system Care: this is the process of building the immune system up with food and tea 
-9. Male and Female reproductive system contour. This is the process of shrinking all growth in the system and cleaning of all pathogens that disrupt 
-the production and sexual process.
-10.  Joint Pain relief Therapy: this is through exercises, massages, supply of bone minerals with only food and tea.
+1. Heart Contouring. 
+2. Weight Loss Programs
+3. Post-Non Surgical Care
+4. Skin Rejuvenation  
+5. Muscle building and Strengthening
+6. Liver Contour
+7.  Kidney Care
+8. Immune system Care 
+9. Male and Female reproductive system contour.
+10.  Joint Pain relief Therapy
     </p>
   </section>
 
@@ -197,7 +189,7 @@ the production and sexual process.
     <p class="text-gray-800 text-base mb-6">
       Orders happen fast on WhatsApp, questions get answered with herbal wisdom. </p>
 <p class="text-gray-800 text-base mb-6">
-  YOU CAN REACH US ALSO THROUGH THE FOLLOWING >>>>>  +234 902 000 9988 + 234 706 282 3828 +234 814 673 0044 +1 405 765 6304
+  YOU CAN REACH US ALSO THROUGH THE FOLLOWING >> (+234 902 000 9988) (+234 706 282 3828) (+234 814 673 0044) (+1 405 765 6304)
     </p>
     <a href="https://wa.me/14057656304?text=Hello Pascaqueen" class="bg-green-700 hover:bg-green-800 text-white py-3 px-6 rounded-md font-semibold text-base">
       ORDER NOW
