--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header class="bg-black text-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-6">
-      <img src="images/logo.jpg" alt="Pascaqueen logo" class="h-20 w-auto object-contain">
+      <img src="images/logo.png" alt="Pascaqueen logo" class="h-20 w-auto object-contain">
       <nav>
         <ul class="flex space-x-6 font-semibold text-base">
           <li><a href="#home" class="hover:text-green-400">Home</a></li>
