--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
         <img src="images/product1.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Flat Tummy Herb</h3>
-          <p class="text-gray-300 flex-1 mb-4">Natural stomach-slimming blend.</p>
-          <a href="https://wa.me/14057656304?text=I want Flat Tummy Herb" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+          <h3 class="font-semibold text-lg mb-2">BLOOD BOOSTER TEA</h3>
+          <p class="text-gray-300 flex-1 mb-4">Natural Energy Booster.</p>
+          <a href="https://wa.me/14057656304?text=I want Blood booster tea" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
@@ -61,9 +61,9 @@
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
         <img src="images/product2.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Eye Bright Herb</h3>
-          <p class="text-gray-300 flex-1 mb-4">Supports clear eyesight.</p>
-          <a href="https://wa.me/14057656304?text=I want Eye Bright Herb" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+          <h3 class="font-semibold text-lg mb-2">INSULIN LIQUID</h3>
+          <p class="text-gray-300 flex-1 mb-4">Supports Body Growth.</p>
+          <a href="https://wa.me/14057656304?text=I want Insulin Liquid" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
@@ -71,45 +71,45 @@
         <img src="images/product3.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
 
-<h3 class="font-semibold text-lg mb-2">Blood Cleanser</h3>
-          <p class="text-gray-300 flex-1 mb-4">Body detox and circulation booster.</p>
-          <a href="https://wa.me/14057656304?text=I want Blood Cleanser" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+<h3 class="font-semibold text-lg mb-2">QUEEN BITTERS</h3>
+          <p class="text-gray-300 flex-1 mb-4">Body Cleansing.</p>
+          <a href="https://wa.me/14057656304?text=I want Queen Bitters" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
         <img src="images/product4.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Fertility Booster</h3>
-          <p class="text-gray-300 flex-1 mb-4">Reproductive system support.</p>
-          <a href="https://wa.me/14057656304?text=I want Fertility Booster" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+          <h3 class="font-semibold text-lg mb-2">ULCER TEA</h3>
+          <p class="text-gray-300 flex-1 mb-4">Stomach system support.</p>
+          <a href="https://wa.me/14057656304?text=I want Ulcer Tea" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
         <img src="images/product5.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Stroke Recovery Mix</h3>
-          <p class="text-gray-300 flex-1 mb-4">Nerve + brain restoration herbs.</p>
-          <a href="https://wa.me/14057656304?text=I want Stroke Recovery Mix" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+          <h3 class="font-semibold text-lg mb-2">QUEEN SEED MILK</h3>
+          <p class="text-gray-300 flex-1 mb-4">Tasty Milk from Seeds.</p>
+          <a href="https://wa.me/14057656304?text=I want Queen sSeed Milk" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
         <img src="images/product6.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Immune Booster</h3>
-          <p class="text-gray-300 flex-1 mb-4">Supports natural immunity.</p>
-          <a href="https://wa.me/14057656304?text=I want Immune Booster" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+          <h3 class="font-semibold text-lg mb-2">QUEEN SWALLOW</h3>
+          <p class="text-gray-300 flex-1 mb-4">Supports Natural Soups.</p>
+          <a href="https://wa.me/14057656304?text=I want Queen Swallow" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
         <img src="images/product7.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Skin Glow Mix</h3>
-          <p class="text-gray-300 flex-1 mb-4">Brightens and clears skin.</p>
-          <a href="https://wa.me/14057656304?text=I want Skin Glow Mix" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+          <h3 class="font-semibold text-lg mb-2">MEMORY OAT</h3>
+          <p class="text-gray-300 flex-1 mb-4">Improves Brain Power.</p>
+          <a href="https://wa.me/14057656304?text=I want Memory Oat" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
