--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Some services We Offer are as follows;
     <a href="about.html" class="hover:text-green-400 mx-2">About Us</a> |
     <a href="contact.html" class="hover:text-green-400 mx-2">Contact</a>
   </div>
-  &copy; 2025 Pascaqueen Herbal Shop. Made with plant alchemy and code sorcery.
+  &copy; 2025 Pascaqueen Herbal Shop. Designed by HSPRAFRIQUE.
 </footer>
 
 <script>
