--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Some services We Offer are as follows;
 <!-- Orders Counter -->
 <section class="py-8 bg-green-100">
   <div class="max-w-7xl mx-auto text-center">
-    <h2 class="text-3xl sm:text-4xl font-bold text-green-900 mb-2">Trusted by thousands</h2>
+    <h2 class="text-3xl sm:text-4xl font-bold text-green-900 mb-2">Trusted by Millions of Africans</h2>
     <p class="text-xl sm:text-2xl font-semibold text-gray-800">
       <span id="orderCounter">0</span> orders delivered
     </p>
